# fasta-cleaner

./: Cargo.toml  README.md
src/: main.rs
